[metadata]
name = markdown-builder
version = 0.1.2
author = Romilly Cocking
author_email = romilly.cocking@gmail.com
description = Create Markdown from a Python program
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romilly/markdown-builder
project_urls =
    Bug Tracker = https://github.com/romilly/markdown-builder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src